ROC-4847 Accept Settlement Agreement [Defendant]  (#1222)

--- a/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementClaimant.njk
@@ -50,9 +50,10 @@
 {% macro settlementAgreementSignedByBothClaimantClaimDetails(claim) %}
   <div class="status-block">
     <h2 class="heading-small">{{ t('You’ve both signed a settlement agreement') }}</h2>
-    {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
+    {% set paymentIntention = claim.settlement.getLastOffer().paymentIntention %}
+    {% if paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
       <p>{{ t('The agreement says the defendant will pay you in full by {{ paymentDate }}.',
-          { paymentDate: claim.settlement.getLastOffer().paymentIntention.paymentDate | date }) }}</p>
+          { paymentDate: paymentIntention.paymentDate | date }) }}</p>
       {% elif paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
       <p>{{ t('The agreement says the defendant will pay you in instalments of {{ instalmentAmount }} {{ paymentSchedule }} starting {{ firstPaymentDate }}.',
           {
