--- a/src/main/features/dashboard/views/macro/claimStatus/offerSettlement.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/offerSettlement.njk
@@ -47,13 +47,13 @@
 
       <p>{{ downloadAgreementLink(claim) }}</p>
 
-    <p>{{ internalLink('Contact ' + claimantName, claimantDetailsPageURI) }}{{ t('if you need their payment details.') }}</p>
+    <p>{{ t(internalLink('Contact ' + claimantName, claimantDetailsPageURI)) }}{{ t('if you need their payment details.') }}</p>
     <p>{{ t('Make sure you get receipts for any payments.') }}</p>
     <h2 class="heading-small">{{ t('Request County Court Judgment') }}</h2>
       <p>{{ t('If the defendant doesn’t pay or breaks the terms of the settlement agreement, you can '
           + internalLink('request a County Court Judgment. ', CCJPaths.paidAmountPage.evaluateUri({
             externalId:claim.externalId }) )) | safe }}</p>
-    <p>{{ internalLink('Contact ' + claimantName, claimantDetailsPageURI) }}{{ t('if you need their payment details.') }}</p>
+    <p>{{ t(internalLink('Contact ' + claimantName, claimantDetailsPageURI)) }}{{ t('if you need their payment details.') }}</p>
     <p>{{ t('Make sure you get receipts for any payments.') }}</p>
     {% else %}
       <h2 class="heading-small">{{ t('Agreement signed') }}</h2>
