Make rejected settlement view same as the prototype. "Request a CCJ" button grey, not green, and add horizontal rule between statuses

--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -145,6 +145,8 @@ claimantRejectedDefendantAsCompanyOrOrganisationResponseDetailedStatus %}
       {% elif state.status === ClaimStatus.SETTLEMENT_AGREEMENT_REJECTED %}
         {{ settlementAgreementRejectedClaimantClaimDetails(claim, csrf) }}
       {% endif %}
+
+    {% if not loop.last %}<hr/>{% endif %}
   {% endfor %}
 {% endmacro %}
 
