--- a/src/main/features/claimant-response/views/choose-how-to-proceed.njk
+++ b/src/main/features/claimant-response/views/choose-how-to-proceed.njk
@@ -28,6 +28,7 @@
               value: FormaliseRepaymentPlanOption.SIGN_SETTLEMENT_AGREEMENT.value,
               checked: (form.valueFor(name).value === FormaliseRepaymentPlanOption.SIGN_SETTLEMENT_AGREEMENT.value),
               bold: true,
+              greyHint: false,
               hint: 'This is a legal agreement between you and the defendant agreeing to the repayment plan. If they break it you can request a County Court Judgment (CCJ). We’ll show you a suggested format for the agreement.'
             },
             {
@@ -35,6 +36,7 @@
               value:  FormaliseRepaymentPlanOption.REQUEST_COUNTY_COURT_JUDGEMENT.value,
               checked: (form.valueFor(name).value === FormaliseRepaymentPlanOption.REQUEST_COUNTY_COURT_JUDGEMENT.value),
               bold: true,
+              greyHint: false,
               hint: 'You can ask the court to make a formal order binding the defendant to the repayment plan. This adds the defendant to the CCJ register, which may make it more difficult for them to borrow money to repay you.'
             }
           ]
