Update content on check and send page

--- a/src/main/features/response/views/macro/check-and-send/admission.njk
+++ b/src/main/features/response/views/macro/check-and-send/admission.njk
@@ -58,7 +58,7 @@
   {% if statementOfMeansIsApplicable %}
     {{
       row(
-        label = 'Why you can’t pay now',
+        label = 'Briefly explain why you can’t pay immediately',
         value = explanation,
         changeLink = StatementOfMeansPaths.explanationPage.evaluateUri({ externalId: externalId }),
         bold = true
