Address review comments

--- a/src/main/features/claimant-response/views/confirmation/proposed-alternate-payment-plan-to-business-defendant.njk
+++ b/src/main/features/claimant-response/views/confirmation/proposed-alternate-payment-plan-to-business-defendant.njk
@@ -1,3 +1,5 @@
+{% set email = claim.claimantEmail %}
+
 <h2 class="heading-medium">{{ t('Send financial details') }}</h2>
 
 <p>{{ t('You need to send the defendant’s financial details to the court.') }}</p>
@@ -17,7 +19,7 @@
   {{ t('NN1 2LH') }}
 </div>
 
-<p>{{ t('Or email them to') }} <a href="mailto:moneyclaims@hmcts.gsi.gov.uk">moneyclaims@hmcts.gsi.gov.uk</a></p>
+<span class="block">{{ t('Or email them to: <a href="mailto:{{ email }}">{{ email }}</a>', { email: email }) | safe }}</span>
 
 <h2 class="heading-medium">{{ t('If the court believes the defendant can afford your plan') }}</h2>
 
