--- a/src/main/features/response/views/send-company-financial-details.njk
+++ b/src/main/features/response/views/send-company-financial-details.njk
@@ -15,7 +15,8 @@
         <p>{{ t('They’ll review your accounts and can reject your suggested repayment plan if they believe you can pay sooner.') }}</p>
         <p>{{ t('If they reject your plan, the court will make a new plan based on your financial details.') }}</p>
         {{ submitButton('Continue') }}
-        {{ internalLink('Get ' + claimantName + ' contact details.', claimantDetailsPageURI) }}
+        {{ internalLink( t('Get {{ claimantName }}’s contact details.', { claimantName: claimantFullName }),
+        claimantDetailsPageURI ) }}
       </form>
     </div>
   </div>
