Update offers logic and add missing internalLink

--- a/src/main/features/dashboard/views/macro/claimStatus/offerAccepted.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/offerAccepted.njk
@@ -1,4 +1,5 @@
 {% from "./utilityMacros.njk" import signAgreementLink %}
+{% from "internalLink.njk" import internalLink %}
 
 {% macro offerAcceptedForClaimantDashboard(claim) %}
   {% set defendantName = claim.claimData.defendant.name %}
