--- a/src/main/features/claimant-response/views/confirmation.njk
+++ b/src/main/features/claimant-response/views/confirmation.njk
@@ -11,7 +11,7 @@
       <div class="govuk-box-highlight">
         <h1 class="bold-large">
           {% if claim.countyCourtJudgmentRequestedAt or claim.claimantResponse.formaliseOption === FormaliseOption.REFER_TO_JUDGE %}
-          {{ t('County Court Judgment requested') }}
+            {{ t('County Court Judgment requested') }}
           {% elseif repaymentPlanOrigin === 'DEFENDANT' %}
             {% if claim.claimantResponse.formaliseOption === FormaliseOption.SETTLEMENT %}
               {{ t('You’ve signed a settlement agreement') }}
@@ -49,12 +49,12 @@
               { defendantName: claim.claimData.defendant.name }) }}</p>
       {% elseif claim.countyCourtJudgmentRequestedAt %}
         {% if paymentIntentionAccepted %}
-          <p>{{ t('A County Court Judgment has been requested against the defendant.') }}</p>
-          <p>{{ t('When we’ve processed your request we’ll post a copy of the judgment to you and to {{ defendantName }}.',
-              { defendantName: claim.claimData.defendant.name }) }}</p>
+          <p>{{ t('You’ve requested a County Court Judgment against the defendant.') }}</p>
         {% else %}
           <p>{{ t('You’ve rejected the defendant’s repayment plan and a County Court Judgment has been requested against them.') }}</p>
         {% endif %}
+        <p>{{ t('When we’ve processed your request we’ll post a copy of the judgment to you and to {{ defendantName }}.',
+            { defendantName: claim.claimData.defendant.name }) }}</p>
       {% elseif repaymentPlanOrigin === 'DEFENDANT' %}
         {% include "./confirmation/accepted-payment-plan.njk" %}
       {% elseif repaymentPlanOrigin === 'CLAIMANT' %}
