--- a/src/main/features/settlement-agreement/views/sign-settlement-agreement.njk
+++ b/src/main/features/settlement-agreement/views/sign-settlement-agreement.njk
@@ -12,11 +12,11 @@
         <table class="offer-table">
           <tbody>
           <tr>
-            <td>{{ t('The agreement') }}</td>
+            <td class="form-control-1-3">{{ t('The agreement') }}</td>
             <td>{{ offer.content }}</td>
           </tr>
           <tr>
-            <td>{{ t('Completion date')}}</td>
+            <td class="form-control-1-3">{{ t('Completion date')}}</td>
             <td>{{ offer.completionDate | date }}</td>
           </tr>
           </tbody>
