Update content changes

--- a/src/main/features/dashboard/views/macro/claimStatus/claimFullAdmissionForDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimFullAdmissionForDefendant.njk
@@ -4,13 +4,14 @@
 {% from "./utilityMacros.njk" import downloadResponseLink, viewAndRespondOffer %}
 
 {% macro claimFullAdmissionForDefendantDashboard(claim) %}
-    {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
-      {{ t('You’ve admitted all of the claim and said you’ll pay the full amount immediately.') }}
-    {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
-      {{ t('You’ve admitted all of the claim and offered to pay by a set date.') }}
-    {% elseif  claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
-      {{ t('You’ve admitted the claim and offered to pay in instalments.') }}
-    {% endif %}
+  {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
+    {{ t('You’ve admitted all of the claim and said you’ll pay the full amount immediately.') }}
+  {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
+    {{ t('You’ve admitted all of the claim and offered to pay the full amount by {{ paymentDate }}.',
+    { paymentDate: claim.response.paymentIntention.paymentDate | date }) }}
+  {% elseif  claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
+    {{ t('You’ve admitted all of the claim and offered to pay the full amount in instalments.') }}
+  {% endif %}
 {% endmacro %}
 
 {% macro claimFullAdmissionForDefendantClaimDetails(claim) %}
