--- a/src/main/features/claimant-response/views/confirmation.njk
+++ b/src/main/features/claimant-response/views/confirmation.njk
@@ -6,84 +6,85 @@
 {% set heading = 'Confirmation' %}
 
 {% block content %}
-  <div class="grid-row">
-    <div class="column-two-thirds">
-      <div class="govuk-box-highlight">
-        <h1 class="bold-large">
-          {% if claim.countyCourtJudgmentRequestedAt or claim.claimantResponse.formaliseOption === FormaliseOption.REFER_TO_JUDGE %}
-            {{ t('County Court Judgment requested') }}
-          {% elseif repaymentPlanOrigin === 'DEFENDANT' %}
-            {% if claim.claimantResponse.formaliseOption === FormaliseOption.SETTLEMENT %}
-              {{ t('You’ve signed a settlement agreement') }}
-            {% else %}
-              {{ t('You’ve accepted the repayment plan') }}
-            {% endif %}
-          {% elseif repaymentPlanOrigin === 'CLAIMANT' %}
-            {{ t('You’ve proposed a different repayment plan') }}
-          {% elseif repaymentPlanOrigin === 'COURT' %}
-            {{ t('You’ve signed a settlement agreement') }}
-          {% elseif claim.claimantResponse.type === ClaimantResponseType.REJECTION %}
-            {{ t('You’ve rejected their response') }}
-          {% elseif claim.claimantResponse.type === ClaimantResponseType.ACCEPTATION %}
-            {{ t('You’ve accepted their response') }}
-          {% endif %}
-        </h1>
-        <p class="reference-number">
-          <span>{{ t('Your claim number:') }}</span>
-          <span class="block bold-large">{{ claim.claimNumber }}</span>
-        </p>
-        <p>
-          <span class="bold">{{ confirmationDate | date }}</span>
-        </p>
-      </div>
-
-      <h2 class="heading-medium">{{ t('What happens next') }}</h2>
-      {% if claim.claimantResponse.formaliseOption === FormaliseOption.REFER_TO_JUDGE %}
-          <p>{{ t('You’ve requested a County Court Judgment against {{ defendantName }}.',
-              { defendantName: claim.claimData.defendant.name }) }}</p>
-          <p>{{ t('When we’ve processed your request we’ll post a copy of the judgment to you and to {{ defendantName }}.',
-              { defendantName: claim.claimData.defendant.name }) }}</p>
-          <p>{{ t('A judge will decide what {{ defendantName }} can afford to pay, based on their financial details.',
-              { defendantName: claim.claimData.defendant.name }) }}</p>
-          <p>{{ t('We’ll contact both you and {{ defendantName }} to tell you what to do next.',
-              { defendantName: claim.claimData.defendant.name }) }}</p>
-      {% elseif claim.countyCourtJudgmentRequestedAt %}
-        {% if paymentIntentionAccepted %}
-          <p>{{ t('You’ve requested a County Court Judgment against the defendant.') }}</p>
+<div class="grid-row">
+  <div class="column-two-thirds">
+    <div class="govuk-box-highlight">
+      <h1 class="bold-large">
+        {% if claim.countyCourtJudgmentRequestedAt or claim.claimantResponse.formaliseOption ===
+        FormaliseOption.REFER_TO_JUDGE %}
+        {{ t('County Court Judgment requested') }}
+        {% elseif repaymentPlanOrigin === 'DEFENDANT' %}
+        {% if claim.claimantResponse.formaliseOption === FormaliseOption.SETTLEMENT %}
+        {{ t('You’ve signed a settlement agreement') }}
         {% else %}
-          <p>{{ t('You’ve rejected the defendant’s repayment plan and a County Court Judgment has been requested against them.') }}</p>
+        {{ t('You’ve accepted the repayment plan') }}
         {% endif %}
-        <p>{{ t('When we’ve processed your request we’ll post a copy of the judgment to you and to {{ defendantName }}.',
-            { defendantName: claim.claimData.defendant.name }) }}</p>
-      {% elseif repaymentPlanOrigin === 'DEFENDANT' %}
-        {% include "./confirmation/accepted-payment-plan.njk" %}
-      {% elseif repaymentPlanOrigin === 'CLAIMANT' %}
-        {% include "./confirmation/proposed-alternate-payment-plan.njk" %}
-      {% elseif repaymentPlanOrigin === 'COURT' %}
-        {% include "./confirmation/court-suggested-payment-plan.njk" %}
-      {% elseif claim.claimantResponse.type === ClaimantResponseType.ACCEPTATION %}
-        <p>{{ t('The claim is now settled. We’ll email the defendant {{ claim.claimData.defendant.name }} to tell them.') }}</p>
-      {% elseif claim.claimantResponse.freeMediation %}
-        <p>{{ t('You agreed to try to resolve the claim using mediation.') }}</p>
-        <p>{{ t('A mediator will contact you and the defendant in the next 14 days to arrange an appointment.') }}</p>
-      {% elseif claim.claimantResponse.type === ClaimantResponseType.REJECTION %}
-        {% if claim.directionsQuestionnaireDeadline %}
-        <p>
-          {{ t('You need to')}}
-          <a href="{{ DashboardPaths.directionsQuestionnairePage.evaluateUri({ externalId: claim.externalId }) }}">
-            {{ t('complete a directions questionnaire form ')}}</a> {{ t('to tell us more about the claim.')}}
-        </p>
-        <p>{{ t('Your claim won’t proceed if you don’t complete and return the form before {{ deadline }}.',
-            { deadline: claim.directionsQuestionnaireDeadline | date }) }}
-        </p>
+        {% elseif repaymentPlanOrigin === 'CLAIMANT' %}
+        {{ t('You’ve proposed a different repayment plan') }}
+        {% elseif repaymentPlanOrigin === 'COURT' %}
+        {{ t('You’ve signed a settlement agreement') }}
+        {% elseif claim.claimantResponse.type === ClaimantResponseType.REJECTION %}
+        {{ t('You’ve rejected their response') }}
+        {% elseif claim.claimantResponse.type === ClaimantResponseType.ACCEPTATION %}
+        {{ t('You’ve accepted their response') }}
         {% endif %}
-      {% endif %}
-
-      {% include "includes/service_survey_link.njk" %}
-
-      <p><a class="button" href="{{ DashboardPaths.dashboardPage.uri }}">{{ t('Go to your account') }}</a></p>
-
-      {{ supportWidget() }}
+      </h1>
+      <p class="reference-number">
+        <span>{{ t('Your claim number:') }}</span>
+        <span class="block bold-large">{{ claim.claimNumber }}</span>
+      </p>
+      <p>
+        <span class="bold">{{ confirmationDate | date }}</span>
+      </p>
     </div>
+
+    <h2 class="heading-medium">{{ t('What happens next') }}</h2>
+    {% if claim.claimantResponse.formaliseOption === FormaliseOption.REFER_TO_JUDGE %}
+    <p>{{ t('You’ve requested a County Court Judgment against {{ defendantName }}.',
+      { defendantName: claim.claimData.defendant.name }) }}</p>
+    <p>{{ t('When we’ve processed your request we’ll post a copy of the judgment to you and to {{ defendantName }}.',
+      { defendantName: claim.claimData.defendant.name }) }}</p>
+    <p>{{ t('A judge will decide what {{ defendantName }} can afford to pay, based on their financial details.',
+      { defendantName: claim.claimData.defendant.name }) }}</p>
+    <p>{{ t('We’ll contact both you and {{ defendantName }} to tell you what to do next.',
+      { defendantName: claim.claimData.defendant.name }) }}</p>
+    {% elseif claim.countyCourtJudgmentRequestedAt %}
+    {% if paymentIntentionAccepted %}
+    <p>{{ t('You’ve requested a County Court Judgment against the defendant.') }}</p>
+    {% else %}
+    <p>{{ t('You’ve rejected the defendant’s repayment plan and a County Court Judgment has been requested against
+      them.') }}</p>
+    {% endif %}
+    <p>{{ t('When we’ve processed your request we’ll post a copy of the judgment to you and to {{ defendantName }}.',
+      { defendantName: claim.claimData.defendant.name }) }}</p>
+    {% elseif repaymentPlanOrigin === 'DEFENDANT' %}
+    {% include "./confirmation/accepted-payment-plan.njk" %}
+    {% elseif repaymentPlanOrigin === 'CLAIMANT' %}
+    {% include "./confirmation/proposed-alternate-payment-plan.njk" %}
+    {% elseif repaymentPlanOrigin === 'COURT' %}
+    {% include "./confirmation/court-suggested-payment-plan.njk" %}
+    {% elseif claim.claimantResponse.type === ClaimantResponseType.ACCEPTATION %}
+    <p>{{ t('The claim is now settled. We’ll email the defendant {{ claim.claimData.defendant.name }} to tell them.')
+      }}</p>
+    {% elseif claim.claimantResponse.freeMediation === YesNoOption.YES %}
+    <p>{{ t('You agreed to try to resolve the claim using mediation.') }}</p>
+    <p>{{ t('A mediator will contact you and the defendant in the next 14 days to arrange an appointment.') }}</p>
+    {% elseif claim.claimantResponse.type === ClaimantResponseType.REJECTION and claim.directionsQuestionnaireDeadline %}
+    <p>
+      {{ t('You need to')}}
+      <a href="{{ DashboardPaths.directionsQuestionnairePage.evaluateUri({ externalId: claim.externalId }) }}">
+        {{ t('complete a directions questionnaire form ')}}</a> {{ t('to tell us more about the claim.')}}
+    </p>
+    <p>{{ t('Your claim won’t proceed if you don’t complete and return the form before {{ deadline }}.',
+      { deadline: claim.directionsQuestionnaireDeadline | date }) }}
+    </p>
+    {% endif %}
+
+    {% include "includes/service_survey_link.njk" %}
+
+    <p><a class="button" href="{{ DashboardPaths.dashboardPage.uri }}">{{ t('Go to your account') }}</a></p>
+
+    {{ supportWidget() }}
   </div>
+</div>
 {% endblock %}
