--- a/src/main/features/response/views/confirmation/part-admission-steps.njk
+++ b/src/main/features/response/views/confirmation/part-admission-steps.njk
@@ -65,7 +65,7 @@
   <ul class="list list-bullet">
     <li>{{ t('set up your repayment plan to begin when you said it would') }}</li>
     <li>
-      {{ internalLink('Contact ' + claimantName, claimantDetailsPageURI) }}
+      {{ internalLink('contact ' + claimantName, claimantDetailsPageURI) }}
       {{ t('if you need their payment details.') }}
     </li>
     <li>{{ t('make sure you get a receipt for any payments') }}</li>
