--- a/src/main/common/components/payment-intention/payment-plan.njk
+++ b/src/main/common/components/payment-intention/payment-plan.njk
@@ -9,7 +9,11 @@
 {% block content %}
   <div class="column-two-thirds">
 
-    <p>{{ t('The total amount claimed is {{ totalAmount }}. This includes the claim fee and any interest.', { totalAmount: totalAmount | numeral }) }} </p>
+    {% if partAdmit %}
+      <p>{{ t('You admit you owe {{ totalAmount }}.', { totalAmount: totalAmount | numeral }) }}</p>
+    {% else %}
+      <p>{{ t('The total amount claimed is {{ totalAmount }}. This includes the claim fee and any interest.', { totalAmount: totalAmount | numeral }) }} </p>
+    {% endif %}
 
     <form method="post" novalidate class="payment-plan-calculation">
       {{ csrfProtection(csrf) }}
