--- a/src/main/features/claimant-response/views/confirmation.njk
+++ b/src/main/features/claimant-response/views/confirmation.njk
@@ -63,17 +63,18 @@
         {% include "./confirmation/court-suggested-payment-plan.njk" %}
       {% elseif claim.claimantResponse.type === ClaimantResponseType.ACCEPTATION %}
         <p>{{ t('The claim is now settled. We’ll email the defendant {{ claim.claimData.defendant.name }} to tell them.') }}</p>
-      {% elseif claim.claimantResponse.freeMediation %}
+      {% elseif claim.claimantResponse.freeMediation === YesNoOption.YES %}
         <p>{{ t('You agreed to try to resolve the claim using mediation.') }}</p>
         <p>{{ t('A mediator will contact you and the defendant in the next 14 days to arrange an appointment.') }}</p>
-      {% elseif claim.claimantResponse.type === ClaimantResponseType.REJECTION %}
+      {% elseif claim.claimantResponse.type === ClaimantResponseType.REJECTION and claim.directionsQuestionnaireDeadline %}
         <p>
           {{ t('You need to')}}
           <a href="{{ DashboardPaths.directionsQuestionnairePage.evaluateUri({ externalId: claim.externalId }) }}">
-             {{ t('complete a directions questionnaire form ')}}</a> {{ t('to tell us more about the claim.')}}
+            {{ t('complete a directions questionnaire form ')}}</a> {{ t('to tell us more about the claim.')}}
         </p>
         <p>{{ t('Your claim won’t proceed if you don’t complete and return the form before {{ deadline }}.',
-            { deadline: claim.directionsQuestionnaireDeadline | date }) }}</p>
+            { deadline: claim.directionsQuestionnaireDeadline | date }) }}
+        </p>
       {% endif %}
 
       {% include "includes/service_survey_link.njk" %}
